# pdf-reducer

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Dockerfile  README.md  main  main.cpp
src/: main.cpp
